--- a/ANightWithTheSpiceLatteKiller/ANightWithTheSpiceLatteKiller.vcxproj
+++ b/ANightWithTheSpiceLatteKiller/ANightWithTheSpiceLatteKiller.vcxproj
@@ -138,9 +138,9 @@
     <ClCompile Include="PlayerMain.cpp" />
     <ClCompile Include="PlayerMouvement.cpp" />
     <ClCompile Include="SoundManager.cpp" />
-    <ClCompile Include="StateKiller.cpp" />
-    <ClCompile Include="StateStalker.cpp" />
-    <ClCompile Include="StateWalker.cpp" />
+    <ClCompile Include="StateGoKill.cpp" />
+    <ClCompile Include="StateGoStalk.cpp" />
+    <ClCompile Include="StateGoWalk.cpp" />
     <ClCompile Include="StepCounter.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -162,9 +162,9 @@
     <ClInclude Include="PlayerMain.h" />
     <ClInclude Include="PlayerMouvement.h" />
     <ClInclude Include="SoundManager.h" />
-    <ClInclude Include="StateKiller.h" />
-    <ClInclude Include="StateStalker.h" />
-    <ClInclude Include="StateWalker.h" />
+    <ClInclude Include="StateGoKill.h" />
+    <ClInclude Include="StateGoStalk.h" />
+    <ClInclude Include="StateGoWalk.h" />
     <ClInclude Include="StepCounter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
