--- a/ANightWithTheSpiceLatteKiller/ANightWithTheSpiceLatteKiller.vcxproj.filters
+++ b/ANightWithTheSpiceLatteKiller/ANightWithTheSpiceLatteKiller.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="DialogueDataBase.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="MiniaudioImplementation.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlayerMain.h">
